append Survey page components

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="%PUBLIC_URL%/img/logos/logo.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>CSRF Testing Lab</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
