--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-    name="description"
-    content="Web site created using create-react-app"
-    />
-    
+    <meta name="description" content="Web site created using create-react-app" />
+
     <link rel="icon" href="%PUBLIC_URL%/img/logos/logo.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>CSRF Testing Lab</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="root"></div>
   </body>
 </html>
